--- a/server/package.json
+++ b/server/package.json
@@ -8,16 +8,16 @@
     "start": "node dist/server.js"
   },
   "dependencies": {
-    "ws": "^8.16.0",
     "better-sqlite3": "^9.2.2",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "ws": "^8.16.0"
   },
   "devDependencies": {
+    "@types/better-sqlite3": "^7.6.13",
     "@types/node": "^20.11.0",
-    "@types/ws": "^8.5.10",
     "@types/uuid": "^9.0.7",
+    "@types/ws": "^8.5.10",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3"
   }
 }
-
